--- a/app/views/layouts/dashboard/_sidebar.html.erb
+++ b/app/views/layouts/dashboard/_sidebar.html.erb
@@ -107,7 +107,7 @@
                         <a href="<%=tractors_path%>"><i class="fas fa-seedling"></i></i> <span>Tracteurs disponibles</span></a>
                     </li>
                     <li>
-                        <a href="<%=fonctionnements_path%>"><i class="fas fa-seedling"></i></i> <span>Dépenses tracteur</span></a>
+                        <a href="<%=fonctionnements_path%>"><i class="fas fa-seedling"></i></i> <span>Avance tracteur</span></a>
                     </li>
                     <li>
                         <a href="<%=soldes_path%>"><i class="fas fa-seedling"></i></i> <span>Soldes tracteur</span></a>
