--- a/app/views/service_requests/edit.html.erb
+++ b/app/views/service_requests/edit.html.erb
@@ -115,6 +115,13 @@
     </div>
   </div>
 
+  <div class="form-group row">
+      <label class="col-form-label col-md-2">Campagne :</label>
+      <div class="col-md-10">
+        <%= f.number_field :campagne, style: "background-color: #e9ecef;", class: "form-control", value: @service_request.campagne %>
+      </div>
+  </div>
+
   <div style="display: none;">
     <%= f.text_field :garantie, id: "garantie_calculée_hidden", value: @service_request.garantie %>
     <%= f.text_field :kg_paye, id: "kg_calcule_hidden", value: @service_request.kg_paye %>
