--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -10,13 +10,14 @@
     <div class="col-md-6">
           <div class="card shadow-lg border-0">
         <div class="card-header btn-cdae text-white">
-          <h4><i class="fas fa-seedling"></i> Demande de Service - Détails</h4>
+          <h4><i class="fas fa-seedling"></i> Demande de Service - Détails </h4>
         </div>
         <div class="card-body">
           <!-- Ligne 1 : Utilisateur et Statut -->
           <div class="row">
             <div class="col-md-12">
               <h3 class="text-center">N° CLIENT : <%=@service_request.user.code_client%></h3>
+              <h4 class="text-center"><%=@service_request.campagne%> - <%=@service_request.campagne + 1%></h4>
               <hr>
             </div>
             <div class="col-md-6 mb-3">
