--- a/app/views/service_requests/synoptique.html.erb
+++ b/app/views/service_requests/synoptique.html.erb
@@ -6,6 +6,44 @@
     </div>
   </div>
 
+  <div class="row justify-content-center">
+    <div class="col-12">
+        <div class="main-card mb-3 card">
+            <div class="card-body">
+                <%= form_with url: synoptique_path, method: :get, local: true, class: "formSearch form-inline" do %>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="mb-2 mr-sm-2 mb-sm-0 position-relative form-group mt-2">
+                      <%= text_field_tag :search, params[:search], class: "search_nom form-control", placeholder: "Recherche par nom/prénom" %>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="mb-2 mr-sm-2 mb-sm-0 position-relative form-group mt-2">
+                      <%= text_field_tag :campagne, params[:campagne], class: "search_nom form-control", placeholder: "Recherche par campagne" %>
+                    </div>
+                  </div>
+                </div>
+
+                  <div class="d-flex" style="justify-content:space-between">
+                    <div class="d-flex">
+                      <div class="mb-2 mr-sm-2 mb-sm-0 position-relative form-group mt-2  me-2">
+                        <%= submit_tag "Rechercher", class: "btn btn-primary" %>
+                      </div>
+                      <div class="mb-2 mr-sm-2 mb-sm-0 position-relative form-group mt-2">
+                        <a href=<%= synoptique_path %> type="bouton" class="btn btn-light">Effacer</a>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="mb-2 mr-sm-2 mb-sm-0 position-relative form-group mt-2  me-2">
+                        <%= link_to "Aller à l'impression", print_synoptique_service_request_service_requests_path(request.query_parameters), class: "copy-btn text-danger" %>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+            </div>
+        </div>
+    </div>
+  </div>
 
   <div class="card shadow-lg border-0">
     <div class="card-body table-responsive">
@@ -13,6 +51,7 @@
       <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
+            <th>Campagne</th>
             <th>Numero client</th>
             <th>Nom de Client</th>
             <th>Superficie (ha)</th>
@@ -29,6 +68,7 @@
            <% quantit_due = 0 %>
           <% @service_requests.each do |service_request| %>
             <tr>
+              <td><%= service_request.campagne%> - <%= service_request.campagne + 1%></td>
               <td><%= service_request.user.identification  %></td>
               <td><%= service_request.user.full_name %></td>
               <td>
